# nix-options-doc

./: .gitignore  Cargo.toml  README.md  deny.toml  flake.nix
.github/: build-release.yml  run-tests.yml
.github/workflows/: build-release.yml
src/: error.rs  generate.rs  lib.rs  main.rs  parser.rs  types.rs  utils.rs
src/generate/: csv.rs  html.rs  json.rs  markdown.rs  mod.rs
src/tests/: tests.rs
