[package]
name = "nix-options-doc"
version = "0.1.0"
authors = ["Chinmay D. Pai <chinmaydpai@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Generate Markdown documentation for NixOS module options"
keywords = ["nixos", "markdown", "documentation"]
repository = "https://github.com/Thunderbottom/nix-options-doc"
homepage = "https://github.com/Thunderbottom/nix-options-doc"
readme = "README.md"
include = ["src/**/*", "LICENSE*", "README.md"]
publish = false

[dependencies]
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
git2 = "0.20"
html-escape = "0.2"
indicatif = "0.17"
rnix = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.17"
thiserror = "2.0"
walkdir = "2.5"
